first push django

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,36 @@
-# Redirect HTTP to HTTPS
+# Redirect HTTP (port 80) to HTTPS
 server {
     listen 80;
-    server_name www.alhakimconsultation.com;
-    return 301 https://$host$request_uri;
+    server_name alhakimconsultation.com www.alhakimconsultation.com;
+    return 301 https://www.alhakimconsultation.com$request_uri;
 }
 
-# HTTPS server with HTTP/2
+# Redirect HTTPS non-www to www
+server {
+    listen 443 ssl http2;
+    server_name alhakimconsultation.com;
+
+    # SSL certificates
+    ssl_certificate /etc/ssl/certs/fullchain-alhakim.crt;
+    ssl_certificate_key /etc/ssl/private/_.alhakimconsultation.com_private_key.key;
+
+    # Optimize SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+
+    # Redirect to www
+    return 301 https://www.alhakimconsultation.com$request_uri;
+}
+
+# HTTPS server for www with HTTP/2
 server {
     listen 443 ssl http2;
     server_name www.alhakimconsultation.com;
 
-    # SSL certificates (already on server)
-    ssl_certificate /etc/ssl/certs/serp24.online_fullchain.crt;
-    ssl_certificate_key /etc/ssl/private/_.serp24.online_private_key.key;
+    # SSL certificates
+    ssl_certificate /etc/ssl/certs/fullchain-alhakim.crt;
+    ssl_certificate_key /etc/ssl/private/_.alhakimconsultation.com_private_key.key;
 
     # Optimize SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
