--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    build: .
+    image: ghcr.io/fadidab98/alhakim-web:latest
     command: gunicorn --bind 0.0.0.0:8000 core.wsgi:application
     volumes:
       - .:/app
