--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,13 @@
+version: '3.8'
 services:
   web:
     image: ghcr.io/fadidab98/alhakim-web:latest
+    pull_policy: always
     command: gunicorn --bind 0.0.0.0:8000 core.wsgi:application
     volumes:
-      - .:/app
       - ./staticfiles:/app/staticfiles
     ports:
-      - "6090:8000"  # Map host port 8001 to container port 8000
+      - "6090:8000"
     environment:
       - DJANGO_SETTINGS_MODULE=core.settings.prod
       - DATABASE_NAME=alhakim_db
@@ -20,13 +21,13 @@ services:
       - db
   db:
     image: postgres:13
+    pull_policy: always
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=alhakim_db
       - POSTGRES_USER=alhakim_user
       - POSTGRES_PASSWORD=alhakim_pass
-
 
 volumes:
   postgres_data:
