--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,18 +39,22 @@ services:
       - POSTGRES_HOST=db
     depends_on:
       - db
-    command: >
+    command: |
       sh -c "
         echo 'Waiting for db service...';
-        sleep 10;
+        until pg_isready -h \$POSTGRES_HOST -U \$POSTGRES_USER -d \$POSTGRES_DB; do
+          echo 'Waiting for database to be ready...';
+          sleep 2;
+        done;
+        echo 'Database is ready, starting backups';
         while true; do
           TIMESTAMP=\$(date +%Y%m%d_%H%M%S);
-          echo \"Creating backup at \$TIMESTAMP\";
+          echo \"Creating backup at \$TIMESTAMP\" >> /backups/backup_log.txt;
           pg_dump -h \$POSTGRES_HOST -U \$POSTGRES_USER --verbose \$POSTGRES_DB > /backups/backup_\$TIMESTAMP.sql 2>> /backups/backup_errors.log;
           if [ \$? -eq 0 ]; then
-            echo \"Backup succeeded: backup_\$TIMESTAMP.sql\";
+            echo \"Backup succeeded: backup_\$TIMESTAMP.sql\" >> /backups/backup_log.txt;
           else
-            echo \"Backup failed, check /backups/backup_errors.log\";
+            echo \"Backup failed, check /backups/backup_errors.log\" >> /backups/backup_log.txt;
           fi;
           ls -tp /backups/backup_*.sql | tail -n +11 | xargs -I {} rm -- {} || true;
           sleep 300;
