--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ EMAIL_HOST_PASSWORD=fouad@1233211@.&
 CLOUDINARY_CLOUD=dg2c3liap
 CLOUDINARY_KEY=846116433974457
 CLOUDINARY_SECRET=FDji1EGRiD48M8PIy0fzZxel_n8
+DJANGO_SETTINGS_MODULE=core.settings.dev
