--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,10 @@
-version: '3.8'
+version: "3.8"
 services:
   web:
-    image: ghcr.io/fadidab98/alhakim-web:latest
+    #image: ghcr.io/fadidab98/alhakim-web:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     pull_policy: always
     command: gunicorn --bind 0.0.0.0:8000 core.wsgi:application
     volumes:
