--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ SECRET_KEY=your-secret-key123321@.
 DATABASE_NAME=alhakim_db
 DATABASE_USER=alhakim_user
 DATABASE_PASSWORD=alhakim_pass
-EMAIL_HOST_USER=fouadtest96@gmail.com
-EMAIL_HOST_PASSWORD=fouad@1233211@.&
-CLOUDINARY_CLOUD=dg2c3liap
-CLOUDINARY_KEY=846116433974457
-CLOUDINARY_SECRET=FDji1EGRiD48M8PIy0fzZxel_n8
+EMAIL_HOST_USER=support@alhakimconsultation.com
+EMAIL_HOST_PASSWORD=support@25.DE
+CLOUDINARY_CLOUD=dzi970tor
+CLOUDINARY_KEY=798838351613418
+CLOUDINARY_SECRET=hP7tPnGlruBbyYEfanr6chpqjyU
