--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,16 +49,18 @@ services:
     command: |
       sh -c '
         echo "Starting backup process at $(date)" >> /backups/backup.log
-        echo "POSTGRES_HOST is ${POSTGRES_HOST}" >> /backups/backu
-        for i in {1..30}; do
+        echo "POSTGRES_HOST is ${POSTGRES_HOST}" >> /backups/backup.log
+        i=1
+        while [ $i -le 30 ]; do
           pg_isready -h "${POSTGRES_HOST}" -U "${POSTGRES_USER}" -d "${POSTGRES_DB}" >> /backups/backup.log 2>&1
-          if [ $? -eq 0 ]; then
+          if [ $? = 0 ]; then
             echo "Database is ready at $(date)" >> /backups/backup.log
             break
           fi
           echo "Waiting for database to be ready... Attempt $i/30" >> /backups/backup.log
           sleep 2
-          if [ $i -eq 30 ]; then
+          i=$((i + 1))
+          if [ $i = 31 ]; then
             echo "Error: Database not ready after 60 seconds" >> /backups/backup.log
             exit 1
           fi
@@ -68,7 +70,7 @@ services:
           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
           echo "Creating backup at $TIMESTAMP" >> /backups/backup.log
           PGPASSWORD="${POSTGRES_PASSWORD}" pg_dump -h "${POSTGRES_HOST}" -U "${POSTGRES_USER}" --verbose "${POSTGRES_DB}" > /backups/backup_${TIMESTAMP}.sql 2>> /backups/backup.log
-          if [ $? -eq 0 ]; then
+          if [ $? = 0 ]; then
             echo "Backup succeeded: backup_${TIMESTAMP}.sql" >> /backups/backup.log
           else
             echo "Backup failed for $TIMESTAMP" >> /backups/backup.log
