--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
         echo "Starting backup process at $(date)" >> /backups/backup.log
         echo "POSTGRES_HOST is ${POSTGRES_HOST}" >> /backups/backup.log
         i=1
-        while [ $i -le 30 ]; do
+        while [ $i -lt 31 ]; do
           pg_isready -h "${POSTGRES_HOST}" -U "${POSTGRES_USER}" -d "${POSTGRES_DB}" >> /backups/backup.log 2>&1
           if [ $? = 0 ]; then
             echo "Database is ready at $(date)" >> /backups/backup.log
