--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,10 +38,6 @@ services:
     volumes:
       - ./db_backups:/backups
     environment:
-      - POSTGRES_DB=alhakim_db
-      - POSTGRES_USER=alhakim_user
-      - POSTGRES_PASSWORD=alhakim_pass
-      - POSTGRES_HOST=db
       - MAX_BACKUPS=5
     depends_on:
       db:
@@ -49,10 +45,9 @@ services:
     command: |
       bash -c '
         echo "Starting backup process at $(date)" >> /backups/backup.log
-        echo "Environment: HOST=${POSTGRES_HOST}, USER=${POSTGRES_USER}, DB=${POSTGRES_DB}, PASS=${POSTGRES_PASSWORD}" >> /backups/backup.log
         i=1
         while [ $i -le 30 ]; do
-          pg_isready -h "${POSTGRES_HOST}" -U "${POSTGRES_USER}" -d "${POSTGRES_DB}" >> /backups/backup.log 2>&1
+          pg_isready -h db -U alhakim_user -d alhakim_db -p 5432 >> /backups/backup.log 2>&1
           if [ $? -eq 0 ]; then
             echo "Database is ready at $(date)" >> /backups/backup.log
             break
@@ -69,7 +64,7 @@ services:
         while [ $COUNTER -lt ${MAX_BACKUPS} ]; do
           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
           echo "Creating backup at $TIMESTAMP" >> /backups/backup.log
-          PGPASSWORD="${POSTGRES_PASSWORD}" pg_dump -h "${POSTGRES_HOST}" -U "${POSTGRES_USER}" --verbose "${POSTGRES_DB}" > /backups/backup_${TIMESTAMP}.sql 2>> /backups/backup.log
+          PGPASSWORD=alhakim_pass pg_dump -h db -U alhakim_user -d alhakim_db -p 5432 --verbose > /backups/backup_${TIMESTAMP}.sql 2>> /backups/backup.log
           if [ $? -eq 0 ]; then
             echo "Backup succeeded: backup_${TIMESTAMP}.sql" >> /backups/backup.log
           else
