--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,7 @@
 version: "3.8"
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/fadidab98/alhakim-web:latest
     pull_policy: always
     command: gunicorn --bind 0.0.0.0:8000 core.wsgi:application
     volumes:
