--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,9 @@ services:
       - DATABASE_PASSWORD=alhakim_pass
       - DATABASE_HOST=db
       - SECRET_KEY=${SECRET_KEY}
-      - EMAIL_HOST_USER=consultation.alhakim@gmail.com
-      - EMAIL_HOST_PASSWORD=bmmviyhxntrcnwnd
-    
+      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      
     depends_on:
       - db
   db:
