--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,15 +9,14 @@ services:
     ports:
       - "6090:8000"
     environment:
-      - DJANGO_SETTINGS_MODULE=core.settings.prod
-      - DATABASE_NAME=alhakim_db
-      - DATABASE_USER=alhakim_user
-      - DATABASE_PASSWORD=alhakim_pass
-      - DATABASE_HOST=db
+      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_HOST=${DATABASE_HOST}
       - SECRET_KEY=${SECRET_KEY}
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
-      
     depends_on:
       - db
   db:
