--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
-# Redirect HTTP (port 80) to HTTPS
+# Redirect HTTP (port 80) to HTTPS www
 server {
     listen 80;
     server_name alhakimconsultation.com www.alhakimconsultation.com;
     return 301 https://www.alhakimconsultation.com$request_uri;
 }
 
-# Redirect HTTPS non-www to www
+# Redirect HTTPS non-www to www 
 server {
     listen 443 ssl http2;
     server_name alhakimconsultation.com;
@@ -36,6 +36,9 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
+
+    # HSTS to enforce HTTPS
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     location / {
         proxy_pass http://127.0.0.1:6090; # Proxy to host's port 6090
