Changed email conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,7 @@ server {
 
     # HSTS to enforce HTTPS
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    client_max_body_size 100M;
 
     location / {
         proxy_pass http://127.0.0.1:6090; # Proxy to host's port 6090
